2024-12-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): registered two new
	first-class video:s "2021sapt" and "2023visaud".

	* eev-plinks.el (ee-wget-downloading): new function.
	(find-wget0): use `ee-wget-downloading'.

2024-12-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-eval, ee-dot-emacs-read): new
	functions.

2024-12-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): registered a new
	first-class video: "2023slogans".

2024-12-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (eek2, ee-eek2): new functions.

2024-12-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-yttranscript-links): small changes.

2024-12-07  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
	subtitles: "eev2024".

2024-12-06  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-qdraw-links): small changes.

2024-12-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-tryit-body): added some entries for Lean.

	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
	subtitles: "2024bashtest".

2024-12-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): new video, with
	subtitles: "2024trywithasexp".

2024-11-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-tryit-links): new function.
	(ee-tryit-compact, ee-tryit-config): new variables.
	(ee-tryit-read-sexps, ee-tryit-tostring, ee-tryit-has)
	(ee-tryit-line, ee-tryit-if, ee-tryit-body, ee-tryit-progn)
	(ee-tryit-progns): new functions.

2024-11-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-windows-beginner-intro): added "sudo apt-get
	install -y imagemagick qpdf" (for creating animations with
	myqdraw).

2024-11-23  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-dot-emacs-edrxmaxima): new function.