@@ -1,3 +1,8 @@
+2024-12-31  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-videolinks.el (ee-1stclassvideos-info): new first-class
+	video: "2024pianoroll".
+
 2024-12-23  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-videolinks.el (ee-1stclassvideos-info): registered two new
